// <auto-generated />
using System;
using Hato.Modules.Inventory.Infrastructure.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace Hato.Modules.Inventory.Infrastructure.Persistence.Migrations
{
    [DbContext(typeof(InventoryDbContext))]
    partial class InventoryDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasDefaultSchema("inventory")
                .HasAnnotation("ProductVersion", "8.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("Hato.Modules.Inventory.Domain.FeedStage", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid?>("CreatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("created_by");

                    b.Property<DateTimeOffset?>("DeletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("deleted_at");

                    b.Property<bool>("IsActive")
                        .HasColumnType("boolean")
                        .HasColumnName("is_active");

                    b.Property<string>("Key")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("key");

                    b.Property<string>("LabelEs")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("label_es");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid?>("UpdatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("updated_by");

                    b.HasKey("Id")
                        .HasName("p_k_feed_stages");

                    b.HasIndex("IsActive")
                        .HasDatabaseName("i_x_feed_stages_is_active");

                    b.HasIndex("Key")
                        .IsUnique()
                        .HasDatabaseName("i_x_feed_stages_key")
                        .HasFilter("deleted_at IS NULL");

                    b.ToTable("feed_stages", "inventory");
                });

            modelBuilder.Entity("Hato.Modules.Inventory.Domain.GroupFeedConsumption", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<decimal>("AppliedFactor")
                        .HasColumnType("numeric(18,6)")
                        .HasColumnName("applied_factor");

                    b.Property<Guid?>("BatchId")
                        .HasColumnType("uuid")
                        .HasColumnName("batch_id");

                    b.Property<DateOnly>("ConsumedAt")
                        .HasColumnType("date")
                        .HasColumnName("consumed_at");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid?>("CreatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("created_by");

                    b.Property<DateTimeOffset?>("DeletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("deleted_at");

                    b.Property<Guid>("GroupId")
                        .HasColumnType("uuid")
                        .HasColumnName("group_id");

                    b.Property<Guid>("InventoryItemId")
                        .HasColumnType("uuid")
                        .HasColumnName("inventory_item_id");

                    b.Property<string>("Notes")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("notes");

                    b.Property<decimal>("QuantityInBaseUnit")
                        .HasColumnType("numeric(18,3)")
                        .HasColumnName("quantity_in_base_unit");

                    b.Property<decimal>("QuantityRecorded")
                        .HasColumnType("numeric(18,3)")
                        .HasColumnName("quantity_recorded");

                    b.Property<Guid?>("RecordedById")
                        .HasColumnType("uuid")
                        .HasColumnName("recorded_by_id");

                    b.Property<string>("RecordedByLabel")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("recorded_by_label");

                    b.Property<string>("UnitRecorded")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("unit_recorded");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid?>("UpdatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("updated_by");

                    b.HasKey("Id")
                        .HasName("p_k_group_feed_consumptions");

                    b.HasIndex("InventoryItemId")
                        .HasDatabaseName("i_x_group_feed_consumptions_inventory_item_id");

                    b.HasIndex("RecordedById")
                        .HasDatabaseName("i_x_group_feed_consumptions_recorded_by_id");

                    b.HasIndex("GroupId", "ConsumedAt")
                        .HasDatabaseName("i_x_group_feed_consumptions_group_id_consumed_at");

                    b.ToTable("group_feed_consumptions", "inventory");
                });

            modelBuilder.Entity("Hato.Modules.Inventory.Domain.InventoryBatch", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("BatchNumber")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("batch_number");

                    b.Property<decimal>("CostPerUnit")
                        .HasColumnType("numeric")
                        .HasColumnName("cost_per_unit");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid?>("CreatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("created_by");

                    b.Property<DateTimeOffset?>("DeletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("deleted_at");

                    b.Property<DateOnly?>("ExpirationDate")
                        .HasColumnType("date")
                        .HasColumnName("expiration_date");

                    b.Property<Guid>("InventoryItemId")
                        .HasColumnType("uuid")
                        .HasColumnName("inventory_item_id");

                    b.Property<decimal>("Quantity")
                        .HasColumnType("numeric")
                        .HasColumnName("quantity");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid?>("UpdatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("updated_by");

                    b.HasKey("Id")
                        .HasName("p_k_inventory_batches");

                    b.HasIndex("InventoryItemId")
                        .HasDatabaseName("i_x_inventory_batches_inventory_item_id");

                    b.ToTable("inventory_batches", "inventory");
                });

            modelBuilder.Entity("Hato.Modules.Inventory.Domain.InventoryItem", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("Category")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("category");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid?>("CreatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("created_by");

                    b.Property<DateTimeOffset?>("DeletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("deleted_at");

                    b.Property<string>("Description")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("description");

                    b.Property<Guid?>("FeedStageId")
                        .HasColumnType("uuid")
                        .HasColumnName("feed_stage_id");

                    b.Property<decimal>("MinStock")
                        .HasColumnType("numeric")
                        .HasColumnName("min_stock");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("name");

                    b.Property<string>("Unit")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("unit");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid?>("UpdatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("updated_by");

                    b.HasKey("Id")
                        .HasName("p_k_inventory_items");

                    b.HasIndex("FeedStageId")
                        .HasDatabaseName("i_x_inventory_items_feed_stage_id");

                    b.ToTable("inventory_items", "inventory");
                });

            modelBuilder.Entity("Hato.Modules.Inventory.Domain.UnitConversion", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid?>("CreatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("created_by");

                    b.Property<DateTimeOffset?>("DeletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("deleted_at");

                    b.Property<decimal>("Factor")
                        .HasColumnType("numeric(18,6)")
                        .HasColumnName("factor");

                    b.Property<string>("FromUnit")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("from_unit");

                    b.Property<Guid>("InventoryItemId")
                        .HasColumnType("uuid")
                        .HasColumnName("inventory_item_id");

                    b.Property<string>("ToUnit")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("to_unit");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid?>("UpdatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("updated_by");

                    b.HasKey("Id")
                        .HasName("p_k_unit_conversions");

                    b.HasIndex("InventoryItemId", "FromUnit", "ToUnit")
                        .IsUnique()
                        .HasDatabaseName("i_x_unit_conversions_inventory_item_id_from_unit_to_unit");

                    b.ToTable("unit_conversions", "inventory");
                });

            modelBuilder.Entity("Hato.Modules.Inventory.Domain.GroupFeedConsumption", b =>
                {
                    b.HasOne("Hato.Modules.Inventory.Domain.InventoryItem", null)
                        .WithMany()
                        .HasForeignKey("InventoryItemId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("f_k_group_feed_consumptions_inventory_items_inventory_item_id");
                });

            modelBuilder.Entity("Hato.Modules.Inventory.Domain.InventoryBatch", b =>
                {
                    b.HasOne("Hato.Modules.Inventory.Domain.InventoryItem", null)
                        .WithMany("Batches")
                        .HasForeignKey("InventoryItemId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("f_k_inventory_batches_inventory_items_inventory_item_id");
                });

            modelBuilder.Entity("Hato.Modules.Inventory.Domain.InventoryItem", b =>
                {
                    b.HasOne("Hato.Modules.Inventory.Domain.FeedStage", null)
                        .WithMany()
                        .HasForeignKey("FeedStageId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .HasConstraintName("f_k_inventory_items_feed_stages_feed_stage_id");
                });

            modelBuilder.Entity("Hato.Modules.Inventory.Domain.UnitConversion", b =>
                {
                    b.HasOne("Hato.Modules.Inventory.Domain.InventoryItem", null)
                        .WithMany()
                        .HasForeignKey("InventoryItemId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("f_k_unit_conversions_inventory_items_inventory_item_id");
                });

            modelBuilder.Entity("Hato.Modules.Inventory.Domain.InventoryItem", b =>
                {
                    b.Navigation("Batches");
                });
#pragma warning restore 612, 618
        }
    }
}
